--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ real/scs/scs
 real/symalg/symalg
 real/veritas/veritas
 
+shootout/fannkuch-redux/fannkuck-redux
 shootout/pidigits/pidigits
 
 spectral/ansi/ansi
