--- a/shootout/Makefile
+++ b/shootout/Makefile
@@ -1,7 +1,7 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = fannkuch-redux pidigits
+SUBDIRS = fannkuch-redux pidigits spectral-norm
 
 include $(TOP)/mk/target.mk
 
