--- a/shootout/pidigits/Makefile
+++ b/shootout/pidigits/Makefile
@@ -2,9 +2,9 @@ TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 include $(TOP)/mk/target.mk
 
-FAST_OPTS = 10000
-NORM_OPTS = 10000
-SLOW_OPTS = 10000
+FAST_OPTS = 2000
+NORM_OPTS = 6000
+SLOW_OPTS = 10000  # official shootout setting
 
 # The benchmark game also uses -fllvm, which we can't since it might
 # not be available on the developer's machine.
