--- a/shootout/Makefile
+++ b/shootout/Makefile
@@ -1,7 +1,8 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = binary-trees fannkuch-redux fasta n-body pidigits spectral-norm
+SUBDIRS = binary-trees fannkuch-redux fasta k-nucleotide n-body pidigits \
+	reverse-complement spectral-norm
 
 include $(TOP)/mk/target.mk
 
