--- a/real/Makefile
+++ b/real/Makefile
@@ -5,7 +5,7 @@ SUBDIRS = anna bspt cacheprof compress compress2 fem fluid fulsom gamteb gg \
           grep hidden hpg infer lift maillist mkhprog parser pic prolog \
           reptile rsa scs symalg veritas
 
-OTHER_SUBDIRS = PolyGP ebnf2ps linear rx
+OTHER_SUBDIRS = PolyGP linear rx
 
 include $(TOP)/mk/target.mk
 
