--- a/real/Makefile
+++ b/real/Makefile
@@ -2,10 +2,10 @@ TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
 SUBDIRS = anna bspt cacheprof compress compress2 fem fluid fulsom gamteb gg \
-          grep hidden hpg infer lift maillist mkhprog parser pic prolog \
+          grep hidden hpg infer lift linear maillist mkhprog parser pic prolog \
           reptile rsa scs symalg veritas
 
-OTHER_SUBDIRS = PolyGP linear rx
+OTHER_SUBDIRS = PolyGP rx
 
 include $(TOP)/mk/target.mk
 
