--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -4,12 +4,12 @@ include $(TOP)/mk/boilerplate.mk
 SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
           clausify constraints cryptarithm1 cryptarithm2 cse eliza expert \
           fft2 fibheaps fish gcd hartel integer knights lambda last-piece lcss life \
-	  mandel mandel2 minimax multiplier para power pretty primetest puzzle \
-          rewrite scc simple sorting sphere treejoin
+	  mandel mandel2 mate minimax multiplier para power pretty primetest \
+	  puzzle rewrite scc simple sorting sphere treejoin
 
 # compreals	no suitable test data
 # salishan	no Haskell code!
-OTHER_SUBDIRS = compreals lambda last-piece mate salishan secretary triangle
+OTHER_SUBDIRS = compreals lambda last-piece salishan secretary triangle
 
 include $(TOP)/mk/target.mk
 
