--- a/gc/fibheaps/Makefile
+++ b/gc/fibheaps/Makefile
@@ -3,6 +3,7 @@ include $(TOP)/mk/boilerplate.mk
 
 NORM_OPTS = 300000
 
+SRC_HC_OPTS += -package array
 SRC_RUNTEST_OPTS += +RTS -K64m -RTS
 
 ifeq "$(HEAP)" "LARGE"
