--- a/spectral/fibheaps/Makefile
+++ b/spectral/fibheaps/Makefile
@@ -1,6 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
+​SRC_HC_OPTS += -package array
+
 FAST_OPTS = 5000
 NORM_OPTS = 5000
 SLOW_OPTS = 60000
